--- a/bots/index.html
+++ b/bots/index.html
@@ -22,6 +22,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -73,14 +77,14 @@
     <!-- Features -->
 
     <section id="features">
-        <h1 class="about icon" style="color: #ff4c68">About myself</h1>
+        <h1 class="about icon" style="color: #00C9B8">About myself</h1>
         <div class="row">
             <div class="skill-row">
                 <img class="code-img" style="border-radius:100%" src="images/vyom.jpg" alt="code-img" style="max-width:100%;height:auto;">
 
                 <h3>My Journey in Technology</h3>
-                <p class="para">I started making websites when I am in my 7th standard but I couldn't get time to do my hobby in my further classes from 10th to 12. So, I started again in this lockdown and learnt HTML, CSS and javaScript. I am currently learning React.JS
-                    and I want to go further in Front-end dev. Basically, I like to work in a team and can put a lot of hard work in the work which I like the most.</p>
+                <p class="para">I started making websites when I am in my 7th standard but I couldn't get time to do my hobby in my further classes from 10th to 12. So, I started again in this lockdown and learnt HTML, CSS and javaScript basics. I am currently learning
+                    javaScript and I want to go further in Front-end dev. Basically, I like to work in a team and can put a lot of hard work in the work which I like the most.</p>
 
             </div>
         </div>
