--- a/bots/index.html
+++ b/bots/index.html
@@ -48,6 +48,9 @@
                         <a class="nav-link" href="#location">Contact</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#timeline">Education</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#footer">Social</a>
                     </li>
                 </ul>
@@ -124,7 +127,7 @@
 
     <!-- Call to Action -->
     <section id="location">
-        <h2 class="location-h2">Contact Me</h2>
+        <h2 class="location-h2" style="color:#000">Contact Me</h2>
         <p class="address">Vyom Gupta</p>
         <p class="address1"><b style="color:#000">Mobile No. </b><br> +91817142701<br><b style="color:#000">Email id </b><br> vyom.gupta2020@vitstudent.ac.in<br></p>
 
